[tool.poetry]
name = "kbench"
version = "0.1.0"
description = "Benchmarking tool for Kubernetes clusters"
authors = ["Keichi Takahashi <keichi.t@me.com>"]
license = "MIT"

[tool.poetry.scripts]
kbench = "kbench.bench_pod:main"

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.3.2"
kubernetes = "^10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
